c - crash     b - bug fix    e - enhancement    f - new feature  n - note

2.4.10
  b - fix to get new pagg ID and add additional CSA records when restarting from
      checkpoint (backported from 2.5.2)

2.4.9
  b - Backed out enhancement for preempted jobs. This was SVN revision 3784.
      This patch cased qrun to hang and not return when executing jobs.
  e - Commited changes that changed how preempted jobs are killed.
      This change uses a SIGTERM followed by a kill_delay SIGKILL 
      to give preemted jobs time to checkpoint before terminating.

  e - Patch to correctly log attempts to create a cpuset as debug messages.
      The function im_request() in src/resmom/mom_comm.c logs the message:
      pbs_mom: LOG_ERROR::im_request, about to create cpuset for job 55100.blah.
       as an error rather than a debug message (as used in src/resmom/start_exec.c).
       The fix is to replace:
       log_err(-1, id, log_buffer);
      with:
       log_ext(-1, id, log_buffer, LOG_INFO);

  b - Modified fix in qmgr.c in is_attr to check for the '.' character
      on resource attributes such as resources_available.nodect. The 
      attribute is striped of the '.' and the element and just the attribute
      name is used to compare for a valid attribute.
  b - Made a fix to qmgr.c in is_attr. When checking node names against
      attribute keywords is_attr used strncmp and limited the length of the
      compare to the length of the keyword. So node names like stateless
      were tagged as an error. I replaced strncmp with strcmp. This fix was
      added to trunk first. Version 2.5.0
  b - Bugzilla bug 57. Check return value of malloc for tracejob for Linux
      (Chris Samuel - Univ. of Melbourne)
  b - fix so "gres" config gets displayed by pbsnodes
  b - use QSUBHOST as the default host for output files when no host is
      specified. (RT 7678)
  e - allow users to use cpusets and geometry requests at the same time by
      specifying both at configure time.